--- a/style.css
+++ b/style.css
@@ -2,4 +2,12 @@
   font-size: medium;
   font-weight: bold;
   color: blue;
+  text-align: center;
+}
+
+#topic {
+  font-size: larger;
+  font-weight: bolder;
+  color: brown;
+  text-align: center;
 }
