--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   font-weight: bold;
   color: blue;
   text-align: center;
+  font-family: cursive;
 }
 
 #topic {
@@ -11,4 +12,5 @@
   color: brown;
   text-align: center;
   margin-top: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
