--- a/Second Test/style.css
+++ b/Second Test/style.css
@@ -1,28 +1,74 @@
 body {
-  max-width: 600px;
+ max-width: 600px;
   margin: 50px auto;
   padding: 10px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  
 }
 
-.heading {
+/* .heading {
   text-align: center;
+  
+} */
+
+#header{
+  padding:20px 0px 0px;
+  text-align: justify;
 }
-h1 {
-  font-size: 30px;
+
+/* #header h1{
+font-size: 95px;
+text-align:justify;
+font-family:serif;
+margin:0;
+line-height:60px;
+
+} */
+
+p{
+  word-break: break-all;
+  font-family: 'Rozha One',
+  serif;
+}
+
+#small-text {
+  display: flex;
+  justify-content: space-between;
+  font-size: 27px;
+  color: gray;
+}
+
+#big-text{
+  display: flex;
+  justify-content: space-between;
+  font-size: 52px;
+  font-family:serif;
+  margin:0;
+  line-height:0px;
+
+}
+
+p #one > strong > em {
+  font-size: 38px;
+}
+
+p #two > strong > em {
+  font-size: 20px;
 }
 
 #Headline {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  font-size: 19px;
+  font-family: 'Rozha One',
+  serif;
 }
 
 .flex-container {
   display: flex;
   justify-content: space-between;
   gap: 10%;
+  text-align: justify;
 }
 
 #image {
@@ -42,4 +88,10 @@ h1 {
 
 #city {
   color: grey;
+ 
 }
+
+
+
+
+
