--- a/Second Test/style.css
+++ b/Second Test/style.css
@@ -13,6 +13,7 @@ body {
 #header{
   padding:20px 0px 0px;
   text-align: justify;
+  
 }
 
 /* #header h1{
@@ -35,6 +36,12 @@ p{
   justify-content: space-between;
   font-size: 27px;
   color: gray;
+  flex-wrap: wrap;
+  
+}
+
+#small-text h3{
+  margin: 0;
 }
 
 #big-text{
@@ -43,17 +50,18 @@ p{
   font-size: 52px;
   font-family:serif;
   margin:0;
-  line-height:0px;
+  line-height:0.8;
+  flex-wrap: wrap;
 
 }
 
-p #one > strong > em {
-  font-size: 38px;
+/* line heigt works with px and with percentage */
+/* what i added there is the same as adding it as 80%, it can also work with em and rem units */
+
+#big-text h1 {
+  margin: 0px;
 }
 
-p #two > strong > em {
-  font-size: 20px;
-}
 
 #Headline {
   display: flex;
@@ -62,6 +70,11 @@ p #two > strong > em {
   font-size: 19px;
   font-family: 'Rozha One',
   serif;
+  flex-wrap: wrap;
+}
+
+#healdine p {
+  min-width:300px
 }
 
 .flex-container {
@@ -74,8 +87,9 @@ p #two > strong > em {
 #image {
   margin-top: 20px;
   width: 100%;
-  height: 420px;
+  flex:1;
   background: #b3b3b3;
+  min-height:400px;
 }
 
 .left {
@@ -84,14 +98,36 @@ p #two > strong > em {
 
 .right {
   flex: 1;
+  align-self: stretch;
+  display:flex;
+  flex-direction:column;
+}
+
+.right .flex-container{
+  flex:0
 }
 
 #city {
   color: grey;
+  flex-wrap: wrap;
+  
  
 }
 
+section.flex-container{
+  flex-wrap:wrap
+}
 
+.right, .left{
+  min-width:200px;
+  width:100%;
+}
 
+.right .flex-container{
+  flex-direction: row;
+  flex-wrap:wrap
+}
 
-
+.right .flex-container p {
+  min-width: 80px;
+}
